manga_db/webGUI/static/style.css
/* open-sans-regular - latin */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Open Sans Regular'), local('OpenSans-Regular'),
       url('../static/webfonts/open-sans-v15-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('..static/webfonts/open-sans-v15-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
body {
    background-color: #191919;
    font-family: 'Open Sans',sans-serif!important;
    color: #fff;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    text-align: left;
}
a, h1, h2       { color: #fff; underline: none }
a               { text-decoration: none; }
a:hover, a:visited, a:focus {
    text-decoration: none;
    color: #fff;
}
h1, h2          { font-family: 'Open Sans',sans-serif; margin: 0; }
h1              { border-bottom: 2px solid #eee; margin-bottom: 1em;}
h2              { font-size: 1.2em; }
h3              { color: #22a7f0; }
hr { 
    display: block;
    margin-top: .5rem;
    margin-bottom: .5rem;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
    border-color: #fff;
}
.purple-color{background-color: #a233a5 !important} /* #a72aaa */
.pink-color{background-color: #ff2871!important; /* #ff1a73!important; */ /* #ff468e !important */ }
.blue-color { background-color: #1498ff!important; /* #44a6f2!important; */ }
.dark-color { background-color: #2d2d2d!important; }
.red-color { background-color: #e42323!important; /* #f34c4c!important; */ }
.green-color { background-color: #31c131!important; }
.purple-fcolor{ color: #a233a5 !important; }
.pink-fcolor{color: #ff2871!important; /* #ff1a73!important; */ /* #ff468e !important */ }
.dgrey-fcolor { color: #2d2d2d!important; }
.blue-fcolor { color: #1498ff!important; /* #44a6f2!important; */ }
.red-fcolor { color: #e42323!important; /* #f34c4c!important; */ }
.green-fcolor { color: #31c131!important; }
.img-responsive {
    display: block;
    max-width: 100%;
    height: auto;
}
.mdb-navbar-brand {
    font-size: 1.75rem;
    font-weight: bold;
}
.mdb-nav {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    z-index: 999; /* so pos fixed next/prev dont overlap */
}
.mdb-nav-right {
    display: flex;
    flex-flow: row nowrap;
    flex-grow: 1;
    justify-content: flex-end;
}
.page           { margin: 1rem auto 2rem auto; width: 100%;
                  padding: 0.8em}
@media only screen and (min-width: 1024px) {
    /* use full screen width on smaller devices but center on 3/4 for desktop */
    .page {
        width: 75%;
    }
}
.page-nav {
    position: fixed;
    top: 0%;
    height: 100%;
    display: flex;
    align-items: center;
    padding: 0 0.3em;
    font-size: 4em;
    font-weight: bold;
}
.page-nav:hover {
    color: #f34c4c;
    background-color: #7575750f;
}
#page-next {
    right: 0;
}
#page-prev {
    left: 0;
}
.button-leftmost {
    margin-left: 0;
}
.list-tag {
	position: relative;
	padding-right: 17px!important;
}
.list-tag-border {
	border: #22a7f0 1px solid;
}
.list-tag a {
	text-decoration: none!important;
	color: #fff!important;
}
input[type="checkbox"].mdb-checkboxes {
	/* input[type=checkbox], input[type=radio] { */
	vertical-align: middle;
	position: relative;
	bottom: 1px;
	margin: 0 3px 0 0;
}
ul.flash-messages li label {
	font-weight: normal;
	margin-bottom: 0px;
}
.mdb-list-remove {
    display: inline-block;
    position: absolute;
    top: 0;
    bottom: 0;
    vertical-align: middle;
    right: 0;
    text-align: center;
    padding: 3px;
    padding-top: 4px;
    font-size: 0.8em;
    border-left: 1px solid #22a7f0;
}
/* Dropdown Button */
.mdb-drop-btn {
    	cursor: pointer;
}

/* Dropdown button on hover & focus */
.mdb-drop-btn:hover, .mdb-drop-btn:focus {
    background-color: #4c4c4c;
}

/* The container <div> - needed to position the dropdown content */
.mdb-dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.mdb-dropdown-content {
    display: none;
    position: absolute;
    background-color: #333;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    /* limit height and add scrollbar with overflow auto */
    overflow: auto;
    max-height: 250px;
}

/* Links inside the dropdown */
.mdb-dropdown-content a {
    color: #fff;
    padding: 3px 12px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.mdb-dropdown-content a:hover {background-color: #4c4c4c}
/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.mdb-show {display:block;}

.kw-headline hr {
    display: block;
    margin-top: 0;
    margin-bottom: .5rem;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
    border-color: #fff;
}
.kw-headline span {
    margin-left: .25rem;
    font-size: 1.25rem;
    letter-spacing: 1.5px;
}
.ext-info-row {
    margin-bottom: 1.5rem;
}
.ext-info-container {
    float: left;
    width: 100%;
    padding-left: .25rem;
}
.ext-info-container hr {
    display: block;
    margin-top: .2rem;
    margin-bottom: .2rem;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
    border-color: #2196f3;
}
.ext-info-inner {
    font-size: .9rem;
    font-weight: 400;
}
.ext-info-title {
    font-size: 1.1rem;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
}
.ext-info-line {
    display: table-row;
}
.ext-info {
    display: table-cell;
    padding-right: 13px;
}
.ext-info-data {
    display: table-cell;
}
.text-input {
    background-color: #2d2d2d;
    border: none;
    color: #fff;
}
#ext-info-add {
    width: 100%;
    display: flex;
    flex-flow: row nowrap;
}
/* ... */

